# simple_parametrization

./: .gitignore  CMakeLists.txt  README.md
src/: main_cut.cpp  main_free_slim.cpp  main_geodesic.cpp  main_parametrize.cpp  main_tutte.cpp
